[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/controls/VirtualKeyboard.gd" type="Script" id=1]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=2]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0980392, 0.443137, 0.882353, 1 )

[node name="VirtualKeyboard" type="Panel"]
margin_right = 576.0
margin_bottom = 240.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceButton" type="Button" parent="."]
margin_right = 48.0
margin_bottom = 48.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
enabled_focus_mode = 0
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container_Letters" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container_Symbols" type="Container" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
